# amnezia-control

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  README.ru.md  SECURITY.md  compose.caddy.yml  compose.tls.yml  compose.yml  docker-compose.caddy.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_server_checks.py  0003_awg_configs.py  0004_awg_notes.py  0005_traffic_samples.py  0006_ovpn_configs.py  0007_audit_log.py  0008_client_limits.py  0009_server_status.py  0012_user_totp.py  (+12 more)
backend/app/: alerts.py  amnezia_import.py  apikeys.py  audit.py  autobackup.py  awg.py  bootstrap.py  clientip.py  collector.py  config.py  db.py  deploy.py  deploywatch.py  deps.py  expiry.py  fullaccess.py  geo.py  heartbeat.py  limits.py  main.py  models.py  nodestat.py  notes.py  openvpn.py  pausestore.py  ratelimit.py  schemas.py  security.py  server_ops.py  settings_store.py  sshkeys.py  sshops.py  stats_calc.py  stepup.py  totp.py  xray.py
backend/tests/: conftest.py  test_alerts.py  test_api_v1.py  test_app_format_contract.py  test_auth.py  test_awg.py  test_awg_api.py  test_backup.py  test_client_stats.py  test_clientip.py  test_collector.py  test_deploy.py  test_expiry.py  test_fullaccess.py  test_geo.py  test_health.py  test_heartbeat.py  test_history_api.py  test_import.py  test_nodestat.py  test_openvpn.py  test_pause.py  test_security.py  test_servers.py  test_ssh.py  test_stats.py  test_stepup.py  test_top_clients.py  test_totp.py  test_xray_stats.py
(+60 files in other folders)
