[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acontrol-backend"
version = "0.8.0"
description = "Amnezia Control — backend for the self-hosted VPN management panel"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "bcrypt>=4.1",
    "PyJWT>=2.8",
    "asyncssh>=2.17",
    "cryptography>=43.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
